--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meucurriculo",
   "version": "1.0.0",
-  "description": "",
+  "description": "Meu Curriculo",
   "main": "index.js",
   "scripts": {
     "start": "node index"
